Properly override defaults

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,13 +11,13 @@
   {{ end }}
 
   {{ $section := .Site.GetPage "section" .Section }}
-  <!-- <article>
-    <section class="mx-auto content">
-      <div class="c-rich-text">{{- .Content -}}</div>
-    </section>
+    <article>
+      <section class="mx-auto content">
+        <div class="c-rich-text">{{- .Content -}}</div>
+      </section>
 
 
-  </article> -->
+    </article>
 {{ end }}
 
 {{ define "aside" }}
