--- a/layouts/shortcodes/resume.html
+++ b/layouts/shortcodes/resume.html
@@ -1,9 +1,9 @@
 
-<object data="/resume.pdf" type="application/pdf" width="900px" height="900px">
-    <embed src="/resume.pdf">
+<object data="{{ .Get `uri` }}" type="application/pdf" width="900px" height="900px">
+    <embed src="{{ .Get `uri` }}">
         <p>
             This browser does not support PDFs.
-            Please download the PDF to view it: <a href="/resume.pdf">Download PDF</a>.
+            Please download the PDF to view it: <a href="{{ .Get `uri` }}">Download PDF</a>.
         </p>
     </embed>
 </object>
